--- a/index.Rmd
+++ b/index.Rmd
@@ -1,15 +1,24 @@
 ---
 title: "IODS course project"
+author: "Matti Lassila"
 output:
-  html_document:
-    theme: cosmo
+  prettydoc::html_pretty:
+    theme: tactile
+    highlight: github
     toc: true
     toc_depth: 2
     fig_caption: true
     fig_width: 6
     fig_height: 4
-    code_folding: hide
 ---
+
+```{r setup, echo = FALSE}
+library(prettydoc)
+library(tufte)
+library(hrbrthemes)
+```
+
+
 
 ***
   
