Updated learning diary.

--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -1,4 +1,5 @@
-
 # About the project
 
-*Write a short description about the course and add a link to your github repository here. This is an R markdown (.Rmd) file so you can use R markdown syntax. See the 'Useful links' page in the mooc area (chapter 1) for instructions.*
+IODS ([Introduction to Open Data Science](https://blogs.helsinki.fi/thinkopen/welcome-open-data-science/)) is a MOOC offered by University of Helsinki. My goal is to learn new R tips and tricks and to become more organized and productive in data analysis tasks. 
+
+Source of this learning diary is available at my [Github repo](https://github.com/mjlassila).
