--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -1,4 +1,6 @@
-# Insert chapter 2 title here
+
+
+# Week 2 – Regression and model validation
 
 *Describe the work you have done this week and summarize your learning.*
 
