Include automatic last-updated -timestamp.

--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -3,3 +3,5 @@
 IODS ([Introduction to Open Data Science](https://blogs.helsinki.fi/thinkopen/welcome-open-data-science/)) is a MOOC offered by University of Helsinki. My goal is to learn new R tips and tricks and to become more organized and productive in data analysis tasks. 
 
 Source of this learning diary is available at my [Github repo](https://github.com/mjlassila/IODS-project).
+
+Last updated: `r format(Sys.Date(), "%d.%m.%Y")`
